# arroyosas

./: .dockerignore  .env.example  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.dev  Dockerfile_frontend  Dockerfile_frontend_dev  Dockerfile_processor  Dockerfile_websockets  README.md  docker-compose.yml  pixi.toml  pyproject.toml  settings.yaml  settings_container.yaml  settings_dev.yaml  tiled_script.py  udo apt-get update
.devcontainer/: devcontainer.json  docker-compose.yml
.github/workflows/: publish-image.yml  publish_image.yml  publish_image_frontend.yml  python-app.yml  python_app.yml
block_configs/: lse_operator_block.yaml  lse_operator_block_local.yaml  viz_operator_block.yaml
conf/nginx/: nginx.conf
data/: tiled_catalog.db
format/: pyproject.toml
frontend/: package-lock.json  package.json  tailwind.config.js
frontend/public/: index.html
frontend/src/: App.js  OldApp.js  index.js
masks/: mask.npy
models/cnn_autoencoder/: model.py
models/umap/: quick_test.joblib
notebooks/: query.ipynb  tiled.ipynb  tiled_playground.ipynb  tiled_register.ipynb
pipelines_yaml/: kse_operator.yaml  lse_operator.yaml  tiled_poller.yaml  viz_pipeline.yaml
scripts/: register_data.sh  tiled_listener.py  tiled_poller.py  tiled_register_data.sh
scripts/tiled-ws/: consumer.py  producer.py  tiled_ws.ipynb
src/_test/: conftest.py  test_app_frame_listener_sim.py  test_app_ingest_local_images.py  test_app_tiled_event_sim.py  test_app_unified_sim.py  test_base_model_store.py  test_config.py  test_direct_websocket_sim.py  test_log_utils.py  test_ls.py  test_lse_operator.py  test_lse_publisher.py  test_lse_schemas.py  test_mlflow_utils.py  test_redis_conn.py  test_redis_model_store.py  test_redis_proxy_client.py  test_redis_proxy_client2.py  test_reducer.py  test_schemas.py  test_shared_settings.py  test_tiled_ingestor.py  test_tiled_poller.py  test_tiled_poller_extended.py  test_tiled_poller_extra.py  test_tiled_results_publisher.py  test_tiled_results_publisher2.py  test_tiled_websocket_bl733.py  test_tiled_websocket_bluesky.py  test_unified_sim_inner.py  test_unified_sim_run.py  test_vector_save.py  test_websockets.py  test_zmq.py
src/arroyogisaxs/: config.py  directWebsocketSim.py  kv_store.py  log_utils.py  redis.py  reduce.py  schemas.py  shared_settings.py  tiled.py  viz_reduce.py  websockets.py  zmq.py
src/arroyosas/: config.py  directWebsocketSim.py  lse.py  redis.py  schemas.py  websockets.py  zmq.py
tiled_event_logs/run_28b16c3a-5ec4-4c83-8e2e-7e52df303914/: on_event_0001.json  on_event_0002.json  on_event_0003.json  on_event_0004.json  on_event_0005.json  on_new_run_0001.json  on_new_stream_0001.json  on_new_stream_0002.json  on_node_in_stream_0001.json  on_node_in_stream_0002.json  on_node_in_stream_0003.json  on_streams_namespace_0001.json
tiled_event_logs/run_2ddb9b2d-fd1f-4153-a9d5-06d3158aac63/: on_event_0001.json  on_event_0002.json  on_event_0003.json  on_event_0004.json  on_event_0005.json  on_new_run_0001.json  on_new_stream_0001.json  on_new_stream_0002.json  on_node_in_stream_0001.json  on_node_in_stream_0002.json  on_node_in_stream_0003.json  on_streams_namespace_0001.json
tiled_event_logs/run_4651f71a-7879-4e31-ad42-b8f73c478007/: on_event_0001.json  on_event_0002.json  on_event_0003.json  on_event_0004.json  on_event_0005.json  on_new_run_0001.json  on_new_stream_0001.json  on_new_stream_0002.json  on_node_in_stream_0001.json  on_node_in_stream_0002.json  on_node_in_stream_0003.json  on_streams_namespace_0001.json
tiled_event_logs/run_47287a97-87ee-49d7-b1d9-62d58866d656/: on_event_0001.json  on_event_0002.json  on_event_0003.json  on_event_0004.json  on_event_0005.json  on_new_run_0001.json  on_new_stream_0001.json  on_new_stream_0002.json  on_node_in_stream_0001.json  on_node_in_stream_0002.json  on_node_in_stream_0003.json  on_streams_namespace_0001.json
tiled_event_logs/run_4e0aafe7-4b40-4164-bb66-03c5a0b7b84b/: on_event_0001.json  on_event_0002.json  on_event_0003.json  on_event_0004.json  on_event_0005.json  on_new_run_0001.json  on_new_stream_0001.json  on_new_stream_0002.json  on_node_in_stream_0001.json  on_node_in_stream_0002.json  on_node_in_stream_0003.json  on_streams_namespace_0001.json
tiled_event_logs/run_763cb840-6b8d-4a58-a9b1-a27cd44d69e5/: on_event_0001.json  on_event_0002.json  on_event_0003.json  on_event_0004.json  on_event_0005.json  on_new_run_0001.json  on_new_stream_0001.json  on_new_stream_0002.json  on_node_in_stream_0001.json  on_node_in_stream_0002.json  on_node_in_stream_0003.json  on_streams_namespace_0001.json
tiled_event_logs/run_8931346d-cfb5-4fad-b120-e1ee58bf0f69/: on_event_0001.json  on_event_0002.json  on_event_0003.json  on_event_0004.json  on_event_0005.json  on_new_run_0001.json  on_new_stream_0001.json  on_new_stream_0002.json  on_node_in_stream_0001.json  on_node_in_stream_0002.json  on_node_in_stream_0003.json  on_streams_namespace_0001.json
tiled_event_logs/run_926d5f3e-b74d-4c92-9fe5-c21b4b101313/: on_event_0001.json  on_event_0002.json  on_event_0003.json  on_event_0004.json  on_event_0005.json  on_new_run_0001.json  on_new_stream_0001.json  on_new_stream_0002.json  on_node_in_stream_0001.json  on_node_in_stream_0002.json  on_node_in_stream_0003.json  on_streams_namespace_0001.json
tiled_event_logs/run_afa159a0-5eb1-405e-bb2c-18faa01eab8c/: on_new_run_0001.json  on_new_stream_0001.json  on_new_stream_0002.json  on_node_in_stream_0001.json  on_node_in_stream_0002.json  on_node_in_stream_0003.json  on_streams_namespace_0001.json
tiled_event_logs/run_b8b11da8-814a-469a-956c-917a7520cf5f/: on_event_0001.json  on_event_0002.json  on_event_0003.json  on_event_0004.json  on_event_0005.json  on_new_run_0001.json  on_new_stream_0001.json  on_new_stream_0002.json  on_node_in_stream_0001.json  on_node_in_stream_0002.json  on_node_in_stream_0003.json  on_streams_namespace_0001.json
tiled_event_logs/run_bdde98cd-b17f-4af5-9a32-08439a6ad953/: on_event_0001.json  on_event_0002.json  on_event_0003.json  on_event_0004.json  (+8 more)
work/: .bash_history  .gitconfig
(+530 files in other folders)
