[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"


[project]
name = "arroyoSAS"
version = "0.0.1"
description = "A package to perform computations and suggestions during a time-resolved GISAXS experiment."
authors = [{ name = "Dylan McReynolds", email = "dmcreynolds@lbl.gov" }]
dependencies = []

[project.optional-dependencies]


dev = [
    "fakeredis",
    "flake8",
    "pre-commit",
    "pytest-asyncio",
    "pytest-mock",
    ]

lse = [
    "torchvision==0.17.2",
    "joblib"
]

viz = [
    
]

all = [
    "arroyopy",
    "bluesky",
    "dynaconf",
    "python-dotenv",
    "pandas",
    "msgpack",
    "numpy",
    "tiled[client] >=0.1.0b14, <0.2",
    "Pillow",
    "pyzmq",
    "tqdm",
    "typer",
    "websockets",
    "redis",
    "numpy<2.0.0",
    "pandas",
    "python-dotenv",
    "pyarrow>=14.0.1",
    "pyFAI==2025.03",
    "aiosqlite",
]

[tool.isort]
profile = "black"



[tool.pixi.pypi-dependencies]


[tool.pixi.environments]
# # default = { solve-group = "default" }
dev = { features = ["dev"] }
# # notebook = { features = ["notebook"], solve-group = "default" }
# lse = { features = ["lse"]}
