[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"


[project]
name = "arroyoSAS"
version = "0.1.0"
description = "A package to perform computations and suggestions during a time-resolved GISAXS experiment."
authors = [{ name = "Dylan McReynolds", email = "dmcreynolds@lbl.gov" }]
dependencies = [
    "arroyopy >= 0.3.0a4",
    "dynaconf",
    "python-dotenv",
    "pandas",
    "msgpack",
    "numpy",
    "Pillow",
    "bluesky-tiled-plugins==2.0.0b57",
    "pyzmq",
    "tqdm",
    "typer",
    "websockets",
    "zarr",
    "transformers",
    "redis"]

[project.optional-dependencies]
workflow-viz = [
    "joblib",
    "numpy<2.0.0",
    "pandas",
    "plotly-express",
    "python-dotenv",
    "pyarrow>=14.0.1",
    "requests==2.26.0",
    "diskcache==5.6.3",
    "scikit-learn==1.3.0"]

dev = [
    "fakeredis",
    "flake8",
    "pre-commit",
    "pytest-asyncio",
    "pytest-mock",
    "tiled[server] >=0.1.0b14, <0.2"
    ]

lse = [
    "torchvision==0.17.2",
    "joblib",
    "latent-space-explorer @ git+https://github.com/mlexchange/mlex_latent_explorer.git@main"
]

all = [
    "arroyopy >= 0.3.0a4",
    "bluesky",
    "dynaconf",
    "python-dotenv",
    "pandas",
    "msgpack",
    "numpy",
    "ophyd",
    "Pillow",
    "pyzmq",
    "tqdm",
    "typer",
    "websockets",
    "tiled[client] >=0.1.0b14, <0.2",
    "redis",
    "numpy<2.0.0",
    "pandas",
    "python-dotenv",
    "pyarrow>=14.0.1",
    "pyfai",
    "aiosqlite",

]

[tool.isort]
profile = "black"



[tool.pixi.workspace]
name = "arroyosas"
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.dependencies]
# pyFAI from conda-forge avoids needing a C compiler
python = "3.12.*"
pyfai = ">=2024.1"

[tool.pixi.pypi-dependencies]
arroyosas = { path = ".", editable = true }
arroyopy = { path = "../arroyopy", editable = true }

[tool.pixi.tasks]
lse_operator = "arroyo run block_configs/lse_operator_block.yaml"

[tool.pixi.environments]
default = { solve-group = "default,lse" }
dev = { features = ["dev"], solve-group = "default" }
