[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"


[project]
name = "arroyoSAS"
version = "0.1.0"
requires-python = ">=3.11,<3.12"
description = "A package to perform computations and suggestions during a time-resolved GISAXS experiment."
authors = [{ name = "Dylan McReynolds", email = "dmcreynolds@lbl.gov" }]
dependencies = [
    "arroyopy >= 0.3.0a4",
    "dynaconf",
    "python-dotenv",
    "pandas",
    "msgpack",
    "numpy",
    "Pillow",
    "bluesky-tiled-plugins==2.0.0b57",
    "pyzmq",
    "tqdm",
    "typer",
    "websockets",
    "zarr",
    "transformers",
    "tiled[all]",
    "redis",
]

[dependency-groups]
workflow-viz = [
    "joblib",
    "numpy<2.0.0",
    "pandas",
    "plotly-express",
    "python-dotenv",
    "pyarrow>=14.0.1",
    "requests==2.26.0",
    "diskcache==5.6.3",
    "scikit-learn==1.3.0",
]

dev = [
    "fakeredis",
    "ruff",
    "pre-commit",
    "pytest-asyncio",
    "pytest-cov",
    "pytest-mock",
    "tiled[server]",
]

lse = [
    "aiosqlite",
    "dynaconf",
    "msgpack",
    "redis",
    "websockets",
    "zarr",
    "scikit-learn==1.3.0",
    "torch>=2.0.0",
    "torchvision==0.17.2",
    "transformers==4.47.1",
    "umap-learn",
    "joblib==1.4.2",
    "mlflow",
    "protobuf<4.0.0",
    "setuptools<71",
]


[tool.ruff]
line-length = 127
extend-exclude = ["notebooks", "scripts/tiled-ws"]

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]



[tool.pixi.workspace]
name = "arroyosas"
channels = ["conda-forge", "pytorch"]
platforms = ["linux-64"]

[tool.pixi.dependencies]
# pyFAI from conda-forge avoids needing a C compiler
python = "3.12.*"
pyfai = ">=2024.1"
# CPU-only pytorch from the pytorch channel; also pins numpy to avoid NumPy 2.x incompatibility
pytorch = {version = ">=2.0.0", channel = "pytorch"}
torchvision = {version = "0.17.2", channel = "pytorch"}
cpuonly = {version = "*", channel = "pytorch"}
numpy = "<2.0"

[tool.pixi.pypi-dependencies]
arroyosas = { path = ".", editable = true }
arroyopy = { path = "../arroyopy", editable = true }

[tool.pixi.tasks]
lse_operator = "arroyo run block_configs/lse_operator_block.yaml"
test = "pytest"
coverage = "pytest --cov=src --cov-report=term-missing"
lint = "ruff check . && ruff format --check ."

[tool.pixi.environments]
default = { solve-group = "default" }
dev = { features = ["dev"], solve-group = "default" }

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["src/_test"]

[tool.coverage.run]
source = ["src/arroyosas"]
omit = ["src/_test/*"]
