[project]
authors = [{name = "Dylan McReynolds", email = "dmcreynolds@lbl.gov"}]
dependencies = []
description = "Add a short description here"
name = "format"
requires-python = ">= 3.11"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
format = { path = ".", editable = true }

[tool.pixi.tasks]
